# agri

./: .env.template  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  et --merge ORIG_HEAD  init_user.py  pyproject.toml
app/: factory.py
app/api/: __init__.py  category.py  farm.py  fertilizer.py  product.py  resource.py  transfer_request.py  transfer_status.py  tree.py  user.py
app/core/: authz.py  config.py  constants.py  firebase.py  msg.py
app/crud/: __init__.py  base.py  crud_category.py  crud_farm.py  crud_fertilizer.py  crud_product.py  crud_product_history.py  crud_transfer_request.py  crud_transfer_status.py  crud_tree.py  crud_user.py
app/init_sql/: role.sql  transfer_status.sql
app/models/: __init__.py  categories.py  farm_fertilizers.py  farm_trees.py  farms.py  fertilizers.py  item_resources.py  product_history.py  product_transfer_status.py  products.py  resource.py  rfids.py  role.py  transfer_request.py  transfer_status.py  trees.py  users.py
app/schemas/: categories.py  farm_fertilizers.py  farm_trees.py  farms.py  fertilizers.py  item_resources.py  product_transfer_status.py  products.py  request_params.py  resource.py  responses.py  roles.py  transfer.py  trees.py  users.py
app/utils/: __init__.py  random.py  upload_file.py
migrations/: env.py
migrations/versions/: 057c0fdcdc93_add_rfid.py  151d5055bd47_farms_categories_products.py  301e9d3187db_update_by.py  36dadf07cbb8_add_field_farm.py  45a4220117ab_column_updated_at.py  48d64df1da5d_update_resource.py  (+8 more)
