[tool.poetry]
name = "agriblock"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.2"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"
requests = "^2.28.0"
alembic = "^1.8.0"
psycopg2-binary = "^2.9.3"
fastapi-users = {extras = ["sqlalchemy2"], version = "^9.3.1"}
asyncpg = "^0.25.0"
SQLAlchemy = "^1.4.39"
databases = "^0.5.5"
gunicorn = "^20.1.0"
emails = "^0.5.15"
Jinja2 = "^3.0.3"
aiofiles = "^0.8.0"
Pillow = "^9.2.0"
filetype = "^1.1.0"
firebase-admin = "^5.2.0"
apscheduler = "^3.9.1"
cryptography = "^37.0.4"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
ipython = "^7.34.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.cruft]
skip = [".env"]
